# hermes-gnomes

./: .gitignore  README.md  SOUL.md  pyproject.toml  secrets.age.example
config/: calendar.yaml  config.yaml
config/systemd/: hermes-gnomes.service
src/hermes_gnomes/: __init__.py  anomaly_detector.py  approval_queue.py  config.py  cost_tracker.py  customer_db.py  decision_log.py  gdrive_reader.py  llm.py  main.py  rate_limiter.py  secrets_vault.py  telegram_bridge.py  untrusted.py
tests/: conftest.py  test_anomaly_detector.py  test_approval_queue.py  test_config.py  test_cost_tracker.py  test_customer_db.py  test_decision_log.py  test_gdrive_reader.py  test_integration_smoke.py  test_llm.py  test_main.py  test_rate_limiter.py  test_secrets_vault.py  test_telegram_bridge.py  test_untrusted.py
